@@ -30,4 +30,3 @@ Future goals for development (in no particular order):
 - Put the configuration variables into a separate config file with better inline documentation.
 - Add debug/verbose switch to enable xtrace and additional messages indicating program flow points
 - Use lzip for compression rather than 7-Zip.
-- When checking the archive files on disk, warn if they are zero-byte files (not properly exported).
